# edgeflow

./: .dockerignore  .gitignore  MANIFEST.in  README.md  README_kr.md  architecture.md  dev.yaml  goal.py  main.py  pyproject.toml  setup.py
docs/: README_kr.md  TECHNICAL_DEEP_DIVE.md  cli_usage_kr.md  getting_started_k8s_kr.md  performance_optimization_kr.md  roadmap.md
edgeflow/: __init__.py  __main__.py  cli.py  comms.py  config.py  constants.py  core.py  gateway.py  handlers.py  run.py
edgeflow/cli/: __init__.py  builder.py  deployer.py  doctor.py  inspector.py  manager.py  runner.py  scaffold.py  syncer.py  toml_parser.py
edgeflow/cli/data/: dependencies.toml
edgeflow/cli/templates/: Dockerfile.j2  deployment.yaml.j2  redis-data.yaml.j2  redis.yaml.j2
edgeflow/comms/: __init__.py  broker.py  broker_interface.py  frame.py
edgeflow/comms/brokers/: __init__.py  dual_redis.py  dual_redis_list.py  grpc.py  hybrid.py  (+2 more)
edgeflow/nodes/: __init__.py  base.py  bridge.py  consumer.py  fusion.py  producer.py  sequencer.py  sync.py
edgeflow/templates/: Dockerfile.j2  consumer.yaml.j2  gateway.yaml.j2  producer.yaml.j2
edgeflow/utils/: __init__.py  buffer.py
examples/my-robot/: main.py
examples/tutorial/: main.py
examples/yolo/: Dockerfile.nodes-camera.172cmqu0  Dockerfile.nodes-camera.bkq_itx2  Dockerfile.nodes-camera.rfuos1a3  Dockerfile.nodes-camera.uev19ujb  Dockerfile.nodes-gateway.nhy4td6v  Dockerfile.nodes-yolov5.2c3f7yw2  Dockerfile.nodes-yolov5.fagpnwjq  Dockerfile.nodes-yolov5.uq28wkmh  main.py
test-project-1/: .gitignore  main.py  pyproject.toml
(+21 files in other folders)
